# ClassForm

./: README.md
client/: package-lock.json  package.json
client/src/: App.tsx  main.tsx
client/src/api/: client.ts
client/src/components/Container/: Container.module.scss  Container.tsx
client/src/components/Header/: Header.module.scss  Header.tsx
client/src/pages/Dashboard/: Dashboard.tsx
client/src/pages/Login/: Login.module.scss  Login.tsx
client/src/pages/Register/: Register.tsx
client/src/store/: store.ts
client/src/styles/: _variables.scss  main.scss
server/: pyproject.toml
server/app/: app.py  db.py  images.py  schemas.py  users.py
